--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cars</title>
+    <title>{{ site.title }}</title>
     <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
-    <script src="js/topscroll.js"></script>
+    <script src="{{site.baseurl}}/js/topscroll.js"></script>
 </head>
 
 <body>
