--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,10 +20,10 @@
     </header>
 
     <div class="navbar">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="layouts/about.html">About</a></li>
-        <li><a href="layouts/top15.html">Top 15</a></li>
-        <li><a href="layouts/top5.html">Top 5</a></li>
+        <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+        <li><a href="{{site.baseurl}}/about.html">About</a></li>
+        <li><a href="{{site.baseurl}}/top15.html">Top 15</a></li>
+        <li><a href="top5.html">Top 5</a></li>
         <li><a href="contacts.html">Contact</a></li>
     </div>
 
