--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ main{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 1.5em;
     margin-right: -1.5em;
+    font-weight: bold;
+
 }
 .welcome{
     display: flex;
