--- a/css/main-about.css
+++ b/css/main-about.css
@@ -6,7 +6,7 @@ h1{
     padding-top: 4em;
 }
 .about-text{
-    margin-top: 5em;
+    margin-top: 4em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,4 +15,19 @@ h1{
 }
 .about{
     height: 100vh;
+}
+
+@media screen and (max-width: 768px){
+    .about-text{
+        font-size: 14px;
+        display: block;
+        text-align: start;
+    }
+}
+@media screen and (max-width: 640px){
+    .about-text p, .about h1{
+        padding: 0;
+        margin: 0 0 1em 0;
+    }
+
 }
