--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,8 +23,8 @@
         <li><a href="{{site.baseurl}}/index.html">Home</a></li>
         <li><a href="{{site.baseurl}}/about.html">About</a></li>
         <li><a href="{{site.baseurl}}/top15.html">Top 15</a></li>
-        <li><a href="top5.html">Top 5</a></li>
-        <li><a href="contacts.html">Contact</a></li>
+        <li><a href="{{site.baseurl}}/top5.html">Top 5</a></li>
+        <li><a href="{{site.baseurl}}/contacts.html">Contact</a></li>
     </div>
 
     <main>
