--- a/_layouts/contacts.html
+++ b/_layouts/contacts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
     <script src="{{site.baseurl}}/js/topscroll.js"></script>
 </head>
+
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="navbar">
@@ -18,7 +20,33 @@
         <li><a href="{{site.baseurl}}/contacts.html">Contact</a></li>
     </div>
     <main class='contacts'>
-        
+        <section>
+            <i class="fas fa-map-marker-alt"></i>
+            <div>
+                <p>ADRESS</p>
+                <p>Northern Divison Office</p>
+                <p>146 Yuma Street</p>
+                <p>Denver CO 80223</p>
+            </div>
+        </section>
+        <section>
+            <i class="fas fa-phone"></i>
+            <div>
+                <p>PHONE</p>
+                <p>MPCR Group Contracting</p>
+                <p>303 428 2011 phone</p>
+                <p>303 202 0466 facsimile</p>
+            </div>
+        </section>
+        <section>
+            <i class="fas fa-envelope"></i>
+            <div>
+                <p>EMAIL</p>
+                <p>Request for Proposal</p>
+                <p>Info@mpcr.com</p>
+                <p>service@mpcs.com</p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="social">
@@ -43,4 +71,5 @@
         </div>
     </footer>
 </body>
+
 </html>
