--- a/css/contacts.css
+++ b/css/contacts.css
@@ -17,3 +17,23 @@
     font-size: 24px;
     font-weight: bold;
 }
+@media screen and (max-width: 640px){
+    .contacts{
+        padding: 10rem 0 10rem 0;
+    }
+    .contacts section{
+        padding-top: 0;
+        padding-left: 0;
+        padding-right: 1rem;
+    }
+}
+@media screen and (max-width: 768px){
+    .contacts{
+        padding: 5rem 0 5rem 0;
+    }
+    .contacts section{
+        padding-top: 0;
+        padding-left: 0;
+        padding-right: 3rem;
+    }
+}
