--- a/css/main-about.css
+++ b/css/main-about.css
@@ -31,3 +31,15 @@ h1{
     }
 
 }
+@media screen and (max-width: 480px){
+    .about h1{
+        margin: 0;
+        padding: 2rem 0 2rem 0;
+        font-size: 22px
+    }
+    .about .about-text{
+        font-size: 14px;
+        margin-top: 2rem;
+        text-align: center;
+    }
+}
