--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -35,7 +35,7 @@
             <p> about them in U.S. News & World Report's new vehicle rankings (although they look quite different from</p>
             <p> their groundbreaking forebears).</p>
 
-            <p> Check out the world's TOP 15 most influential cars on the following slides.</p>
+            <p> Check out the world's TOP 15 most influential cars on the following pages.</p>
         </div>
     </main>
     <footer>
