--- a/css/main-top5.css
+++ b/css/main-top5.css
@@ -190,3 +190,96 @@
         margin-left: 2rem
     }
 }
+@media screen and (max-width: 560px){
+    .top5-head{
+        border: none
+    }
+    .grid-about{
+        grid-template-columns: repeat(35,2rem);
+        grid-template-rows: repeat(70,2rem);
+        
+    }
+    .grid-about .grid-img{
+        grid-column: 13/24;
+        grid-row: 3/11;
+    }
+    .grid-about .grid-text{
+        grid-column: 13/24;
+        grid-row: 11 / 14;
+        font-size: 12px;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    .grid-about .num{
+        grid-column: 21/24;
+        grid-row: 3/5;
+        padding-top: 0;
+    }
+    .grid-about .grid-img4{
+        grid-column: 13/24;
+        grid-row: 17/25;
+    }
+    .grid-about .grid-text4{
+        grid-column: 13/24;
+        grid-row: 25 / 28;
+        font-size: 12px;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    .grid-about .num4{
+        grid-column: 21/24;
+        grid-row: 17/19;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img3{
+        grid-column: 13/24;
+        grid-row: 31/39;
+    }
+    .grid-about .grid-text3{
+        grid-column: 13/24;
+        grid-row: 39 / 42;
+        font-size: 12px;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    .grid-about .num3{
+        grid-column: 21/24;
+        grid-row: 31/33;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img2{
+        grid-column: 13/24;
+        grid-row: 45/53;
+    }
+    .grid-about .grid-text2{
+        grid-column: 13/24;
+        grid-row: 53 / 56;
+        font-size: 12px;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    .grid-about .num2{
+        grid-column: 21/24;
+        grid-row: 45/47;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img1{
+        grid-column: 13/24;
+        grid-row: 59/67;
+    }
+    .grid-about .grid-text1{
+        grid-column: 13/24;
+        grid-row: 67 / 70;
+        font-size: 12px;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    .grid-about .num1{
+        grid-column: 21/24;
+        grid-row: 59/61;
+        padding-top: 0;
+    }
+}
