--- a/css/main-top5.css
+++ b/css/main-top5.css
@@ -283,3 +283,97 @@
         padding-top: 0;
     }
 }
+@media screen and (max-width: 380px){
+    .top5-head{
+        border: none
+    }
+    .grid-about{
+        grid-template-columns: repeat(40,1rem);
+        grid-template-rows: repeat(70,1rem);
+    }
+
+    .grid-about .grid-img{
+        grid-column: 14/28;
+        grid-row: 3/11;
+    }
+    .grid-about .grid-text{
+        grid-column: 14/28;
+        grid-row: 11 / 15;
+        font-size: 9px;
+        margin: 0;
+        padding: 0.3em;
+    }
+    .grid-about .num{
+        grid-column: 24/28;
+        grid-row: 3/6;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img4{
+        grid-column: 14/28;
+        grid-row: 17/25;
+    }
+    .grid-about .grid-text4{
+        grid-column: 14/28;
+        grid-row: 25 / 29;
+        font-size: 9px;
+        margin: 0;
+        padding: 0.3em;
+    }
+    .grid-about .num4{
+        grid-column: 24/28;
+        grid-row: 17/20;
+        padding-top: 0;
+    }
+    
+    .grid-about .grid-img3{
+        grid-column: 14/28;
+        grid-row: 31/39;
+    }
+    .grid-about .grid-text3{
+        grid-column: 14/28;
+        grid-row: 39 / 43;
+        font-size: 9px;
+        margin: 0;
+        padding: 0.3em;
+    }
+    .grid-about .num3{
+        grid-column: 24/28;
+        grid-row: 31/34;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img2{
+        grid-column: 14/28;
+        grid-row: 45/53;
+    }
+    .grid-about .grid-text2{
+        grid-column: 14/28;
+        grid-row: 53 / 57;
+        font-size: 9px;
+        margin: 0;
+        padding: 0.3em;
+    }
+    .grid-about .num2{
+        grid-column: 24/28;
+        grid-row: 45/48;
+        padding-top: 0;
+    }
+
+    .grid-about .grid-img1{
+        grid-column: 14/28;
+        grid-row: 59/67;
+    }
+    .grid-about .grid-text1{
+        grid-column: 14/28;
+        grid-row: 67 / 71;
+        font-size: 9px;
+        margin: 0;
+        padding: 0.3em;
+    }
+    .grid-about .num1{
+        grid-column: 24/28;
+        grid-row: 59/62;
+        padding-top: 0;
+    }
+}
