--- a/_layouts/contacts.html
+++ b/_layouts/contacts.html
@@ -34,8 +34,8 @@
             <div>
                 <p>PHONE</p>
                 <p>MPCR Group Contracting</p>
-                <p>303 428 2011 phone</p>
-                <p>303 202 0466 facsimile</p>
+                <p>0877 365 217 Phone</p>
+                <p>--- --- --- MPCR</p>
             </div>
         </section>
         <section>
